@@ -1,3 +1,9 @@
+2016-03-09 Riccardo Mottola <rm@gnu.org>
+
+	* Headers/Foundation/NSPathUtilities.h
+	* Source/NSPathUtilities.m
+	Add some new path values.
+
 2016-03-09	Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Headers/Foundation/NSPredicate.h
